--- a/.github/workflows/rp-safe-settings.yml
+++ b/.github/workflows/rp-safe-settings.yml
@@ -5,8 +5,8 @@ name: Release and Publish
 
 on:
   push:
-    branches: 
-    - 'main'
+    # branches: 
+    # - 'main'
   #Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 env:
