ci: disable conventional commit check

--- a/.github/workflows/rp-safe-settings.yml
+++ b/.github/workflows/rp-safe-settings.yml
@@ -36,7 +36,7 @@ jobs:
     needs: release
     name: Publish Image
     runs-on: ubuntu-latest
-    if: needs.release.outputs.changed == 'true'
+    # if: needs.release.outputs.changed == 'true'
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
