--- a/.github/workflows/rp-safe-settings.yml
+++ b/.github/workflows/rp-safe-settings.yml
@@ -1,7 +1,7 @@
 # REFERENCE
 # https://github.com/marketplace/actions/action-for-semantic-release
 
-name: Release and Publish
+name: Release, Publish, and Deploy
 
 on:
   push:
@@ -63,3 +63,29 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
 
+      - name: Install AWS CLI
+        run: |
+          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+          unzip awscliv2.zip
+          sudo ./aws/install
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-region: us-east-1
+          role-to-assume: ${{ secrets.GH_RUNNER_PROD_ROLE_ARN }}
+          role-skip-session-tagging: true
+          role-duration-seconds: 900
+
+      - name: Setup Kubectl
+        uses: Azure/setup-kubectl@v2.1
+        with:
+          version: 'v1.24.0'
+
+      - name: Helm tool installer
+        uses: Azure/setup-helm@v2.1
+        with:
+          version: 'v3.9.0'          
+
+      - name: Update kubeconfig
+        run: aws eks update-kubeconfig --name lead --region us-east-1
